feat: 🎸 update api config

--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "build": "cross-env CI= GENERATE_SOURCEMAP=false craco build",
     "build:kovan": "cross-env CI= GENERATE_SOURCEMAP=false craco build",
     "pkg:kovan": "rm -rf build* && npm run build:kovan && tar -zcvf awaken-build-kovan.tar.gz build",
-    "dev:prod": "cross-env REACT_APP_ENV=prod craco start",
-    "build:prod": "cross-env REACT_APP_ENV=prod CI= GENERATE_SOURCEMAP=false craco build",
+    "dev:prod": "cross-env REACT_APP_API_ENV=mainnet craco start",
+    "build:prod": "cross-env REACT_APP_API_ENV=mainnet CI= GENERATE_SOURCEMAP=false craco build",
     "pkg:prod": "rm -rf build* && npm run build:prod && tar -zcvf awaken-build-prod.tar.gz build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
