chore: 🤖 update k8s config

--- a/.github/workflows/mainnet-package.yaml
+++ b/.github/workflows/mainnet-package.yaml
@@ -1,7 +1,7 @@
 name: Build and Push Image
 on:
   push:
-    branches: ['feature/main-k8s']
+    branches: ['master']
 jobs:
   build-and-push-image:
     runs-on: awaken-runner
